<resources>
    <string name="app_name">Hatchtrack Sensor</string>
    <string name="edit_text_name_default">Name</string>
    <string name="edit_text_email_default">Email</string>
    <string name="edit_text_password_default">Password</string>
    <string name="edit_text_password_again">Password again</string>
    <string name="text_view_password">Password</string>
    <string name="text_view_email">Account</string>
    <string name="text_view_email_new">New Account</string>
    <string name="text_view_confirm_title">Enter the 6-digit confirmation code sent to your email.</string>
    <string name="edit_text_confirm">Confirmation Code</string>
    <string name="button_confirm_account">Confirm Account</string>
    <string name="button_confirm_request">Request New Confirm Code</string>
    <string name="button_sign_in">Sign In</string>
    <string name="text_view_status"></string>
    <string name="button_forgot_password">Reset Password</string>
    <string name="button_create_account">Create Account</string>
    <string name="title_activity_main">Hatchtrack Sensor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="button_peep_select">Peep Name</string>
    <string name="text_view_time_update">Waiting for update...</string>
    <string name="text_view_peep_name">---</string>
    <string name="text_view_temperature">---</string>
    <string name="text_view_humidity">---</string>
    <string name="image_view_temperature_content_description">temperature icon</string>
    <string name="image_view_humidity_content_description">humidity icon</string>
    <string name="text_view_temperature_settings">Temperature Units</string>
    <string name="text_view_settings_title_account_email">Account Email</string>
    <string name="settings_title">Settings</string>

    <string name="SwitchTextTooHotTitle">Too hot (over 102F)</string>
    <string name="SwitchTextTooColdTitle">Too cold (under 98 for > 2 hrs)</string>
    <string name="SwitchTextHumidityOverTitle">Humidity under 25% for 1 day</string>
    <string name="SwitchTextHumidityUnderTitle">Humidity over 60% for 1 day</string>
    <string name="textViewNotificationsTitle">Notification Settings</string>

    <string-array name="temperature_units">
        <item>Fahrenheit (℉)</item>
        <item>Celsius (℃)</item>
    </string-array>

    <string name="text_view_sync_status">Synchronizing with database...</string>
    <string name="button_scan">Scan</string>
    <string name="edit_text_wifi_ssid">SSID</string>
    <string name="text_view_ble_config_wifi_title">WiFi Credentials</string>
    <string name="text_view_ble_wifi_config_status">Scan for Peep...</string>
    <string name="text_view_hatch_config_status">Configure</string>
    <string name="text_view_hatch_config_name_title">Hatch Name</string>
    <string name="text_view_hatch_config_duration_title">Measure Interval</string>
    <string name="text_view_hatch_config_egg_count_title"># of Eggs</string>
    <string name="text_view_measure_duration_units">minutes</string>
    <string name="button_hatch_configure">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
